# llm_engineering

./: .cursorignore  .env.example  .env.swp  .gitignore  1.14.1  8week_roadmap.ipynb  AIM_Intrinsic_Value_Report_May_2026.csv  Bargain_AIM_Stocks.ipynb  CLAUDE.md  CONTRIBUTING.md  CUSTOM_SUMMARIZER.md  Chennaiaudio.ipynb  DIVYANSHGHOSHAL day_2.py  IMPLEMENTATION_PLAN.md  Jonas Thamane Week 4 PR.ipynb  LICENSE  LLM_Engineering_Guide.md  LLM_Engineering_Guide_FR_Tech.md  NEXT_SESSION_PROMPT_2026-01-14_1733.md  NEXT_SESSION_PROMPT_2026-03-18_0643.md  OpenAI_API_Key.txt  PR_WEEK1_DAY1_EXERCISE.md  Pipfile  README.md  SESSION_SUMMARY_2026-01-14_1733.md  SESSION_SUMMARY_2026-03-17_1757.md  SESSION_SUMMARY_2026-03-18_0643.md  SETUP-PC.md  SETUP-Pipenv.md  SETUP-linux.md  SETUP-mac.md  SteadyPrice_Project_Push.md  Stock_Research.ipynb  TROUBLESHOOTING.md  Untitled.ipynb  Week3Day5Mod.ipynb  Week_7_Excersise_fine_tuned_model.ipynb  Week_7_Exercise.ipynb  activeContext.md  anton-notes.docx  (+37 more)
community-contributions/albertoclemente-local-rag-app/backend/: .env.example  Dockerfile  README.md  categorize_existing_docs.py  pyproject.toml
community-contributions/albertoclemente-local-rag-app/backend/app/: api_complete.py  categorization.py  chunking.py  conversation.py  conversation_storage.py  diagnostics.py  embeddings.py  llm.py  main.py  markdown_converter.py  models.py  parsing.py  qdrant_index.py  retrieval.py  settings.py  storage.py  ws.py
community-contributions/shabsi4u/LLM_tutor/: README.md  llm_tutor.py  pyproject.toml  requirements.txt
community-contributions/shabsi4u/LLM_tutor/prompts/: meta_prompt.txt  system_prompt.txt
community-contributions/shabsi4u/Website_brochure_generator/: README.md  pyproject.toml  requirements.txt  test_translation.py  website_brochure_generator.ipynb  website_brochure_generator.py
community-contributions/shabsi4u/Website_brochure_generator_with_UI/: README.md  env.example  prompts.py  pyproject.toml  requirements.txt  website_brochure_generator.py
community-contributions/shabsi4u/synth-data-v2/: .env.example  .gitignore  CODE_REVIEW.md  CODE_REVIEW_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  STEP_4_GENERATION_SERVICE.md  STEP_5_EXPORT_SERVICE.md  demo_export.py  demo_generator.py  pyproject.toml  requirements.txt  test_backend.py  test_database.py  test_mvp.py
community-contributions/shabsi4u/synth-data-v2/.streamlit/: config.toml
community-contributions/shabsi4u/synth-data-v2/exports/: generation_42_data_only.json  generation_42_with_metadata.json  large_dataset.csv  large_dataset.jsonl  products.csv  products.json  products.jsonl  test.csv
community-contributions/shabsi4u/synth-data-v2/synth_data/: __main__.py  config.py  exceptions.py
community-contributions/shabsi4u/synth-data-v2/tests/: conftest.py  test_export.py  test_generator.py  test_schema_parser.py
community-contributions/shabsi4u/synthetic-data-generator/: .gitignore  README.md  cursor-spec.yaml  gradio_ui.py  pyproject.toml  synthetic_data_generator_colab.ipynb
community-contributions/shabsi4u/synthetic-data-generator/cursor_synth/: core.py  utils.py
community-contributions/shabsi4u/synthetic-data-generator/tests/: test_core.py
community-contributions/tamajit_popup-coder/: README.md  main.py  pyproject.toml
community-contributions/tamajit_popup-coder/ai/: __init__.py  solver.py
community-contributions/tamajit_popup-coder/capture/: screen.py
community-contributions/tamajit_popup-coder/ocr/: reader.py
community-contributions/tamajit_popup-coder/ui/: popup.py
community-contributions/tamajit_popup-coder/utils/: cleaner.py
week1/community-contributions/Youtube_video_summarizer/: README.md  install.py  pyproject.toml  requirements.txt  youtube_video_summarizer.ipynb  youtube_video_summarizer.py
week2/community-contributions/AI-career-planner-with-UI-waijian1/: README.md  pyproject.toml
week3/community-contributions/juan_synthetic_data/: .env_example  README.md  app.py  pyproject.toml  requirements.txt
week3/community-contributions/juan_synthetic_data/data/: people_reference.csv  sentiment_reference.csv  wine_reference.csv
week3/community-contributions/juan_synthetic_data/notebooks/: notebook.ipynb
week3/community-contributions/juan_synthetic_data/src/: IO_utils.py  constants.py  data_generation.py  evaluator.py  helpers.py  openai_utils.py  plot_utils.py
week4/community-contributions/ai_speech_to_text/: README.md  audio.py  config.py  hotkeys.py  main.py  pyproject.toml  transcriber.py
week4/community-contributions/docstring_unity_test_tool/: LICENSE  README.md  app_gradio.py  constants.py  pyproject.toml  requirements.txt
week4/community-contributions/docstring_unity_test_tool/examples/: example.py
week4/community-contributions/salah/securecode-ai/: .env.example  .gitignore  README.md  main.py  pyproject.toml
week5/community-contributions/codypharm/: README.md  benchmark.py  main.py  pyproject.toml
week5/community-contributions/codypharm/data/: ground_truth.json
week5/community-contributions/codypharm/src/: app.py
week5/community-contributions/kavyahj04/RAG-Chatbot/: answer.py  app.py  ingest.py  main.py  pyproject.toml
week5/community-contributions/knowledge_worker_with_RAG/: .gitignore  README.md  answer.py  app.py  ingest.py  pyproject.toml
week5/community-contributions/knowledge_worker_with_RAG/evaluation/: eval.py  test.py  tests.jsonl
week5/community-contributions/knowledge_worker_with_RAG/scripts/: build_knowledge_base.py
week5/community-contributions/tsungyulin_RAG_implement_with_langchain_1_0_0/: README.md  main.py  pyproject.toml
week5/community-contributions/tsungyulin_RAG_implement_with_langchain_1_0_0/llm/: __init__.py  utils.py
week8/community_contributions/codypharm/: app.py  pharma_agents.py  pyproject.toml  schemas.py
week8/community_contributions/codypharm/tools/: pharmacy_tools.py
week8/community_contributions/dkisselev-zz/tuxedo_link/: .gitignore  README.md  app.py  cat_adoption_framework.py  config.example.yaml  deploy.sh  env.example  modal_api.py  pyproject.toml  requirements.txt  (+4 more)
(+8466 files in other folders)
