[project]
name = "interview-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.73.1",
    "ipython>=9.12.0",
    "keyboard>=0.13.5",
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyobjc>=12.1",
    "pyobjc-framework-cocoa>=12.1",
    "pyperclip>=1.11.0",
    "pyqt6>=6.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
]
