[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-video-summarizer"
version = "1.0.0"
description = "A tool to summarize YouTube videos using OpenAI's GPT models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "YouTube Video Summarizer Team"},
]
keywords = ["youtube", "summarizer", "openai", "transcript", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.25.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
jupyter = [
    "ipython>=7.0.0",
    "jupyter>=1.0.0",
]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/your-username/youtube-video-summarizer"
Repository = "https://github.com/your-username/youtube-video-summarizer"
Issues = "https://github.com/your-username/youtube-video-summarizer/issues"

[project.scripts]
youtube-summarizer = "youtube_video_summarizer:main"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true



