[project]
name = "ai-career-planner"
version = "0.1.0"
description = "AI career planner for education planning"
readme = "README.md"
authors = [
    { name = "waijianlim", email = "waijianlim@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gradio>=6.9.0",
    "ipython>=9.11.0",
    "openai>=2.26.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
