[project]
name = "synthetic-data"
version = "0.1.0"
description = "An intelligent synthetic data generator using OpenAI models"
authors = [
    { name = "Sebastian Rodriguez" }
]
dependencies = [
    "gradio>=5.49.1",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0"
]
