[project]
name = "rx-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "gradio>=6.4.0",          # Use the latest Gradio
    "gradio-client>=1.5.0",
    "openai>=2.15.0",
    "pandas>=2.2.0,<3.0.0",   # FIX: Lower this to satisfy Gradio
    "pydantic>=2.12.5",
    "pypdf>=6.6.0",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]

# Intel Mac (macOS 15): onnxruntime 1.24.x has no x86_64 wheel; pin to 1.20.x
[tool.uv]
override-dependencies = ["onnxruntime>=1.18.0,<1.21"]