[project]
name = "knowledge-worker-litellm-rag"
version = "0.1.0"
description = "RAG Knowledge Worker on LiteLLM documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.0",
    "openai>=2.0.0",
    "litellm>=1.81.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.65.0",
    "gradio>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "scripts/build_knowledge_base.py",
    "ingest.py",
    "answer.py",
    "app.py",
    "evaluation/eval.py",
    "evaluation/test.py",
    "evaluation/tests.jsonl"
]
