[project]
name = "pharma-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.5.1",
    "openai>=2.16.0",
    "openai-agents>=0.7.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "valyu>=2.5.4",
]
