[project]
name = "securecode-ai"
version = "0.1.0"
description = "AI-powered code security and performance analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.54.0",
    "gradio>=5.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
