[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.18.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
]
